# rgpt

./: Cargo.toml  Dockerfile  README.md  default.nix  flake.nix  shell.nix
src/: client.rs  input.rs  main.rs  terminal.rs
