[package]
name = "rgpt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.27.0", features = ["event-stream"] }
eventsource-stream = "0.2.3"
futures = "0.3.29"
hyper = { version = "1.0.1" }
pulldown-cmark = "0.9.6"
pulldown-cmark-mdcat = "2.1.1"
reqwest = { version = "0.11.22", features = ["json", "stream"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
syntect = "5.1.0"
# termimad = "0.26.1"
thiserror = "1.0.57"
tokio = { version = "1.35.0", features = ["macros", "rt-multi-thread", "rt"] }
