[package]
name = "rgpt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.27.0", features = ["event-stream"] }
eventsource-stream = "0.2.3"
futures = "0.3.31"
hyper = { version = "1.5.2" }
markdown = "1.0.0-alpha.21"
pulldown-cmark = "0.12.1"
pulldown-cmark-mdcat = "2.7.1"
reqwest = { version = "0.11.27", features = ["json", "stream"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
syntect = "5.2.0"
# termimad = "0.26.1"
thiserror = "1.0.69"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "rt"] }
